# rust_web_template

./: .gitignore  Cargo.toml  configuration.example.yaml  configuration.yaml
.github/workflows/: rust.yml
.sqlx/: query-a6f9d0df687552f1605d68d9308a6b732650d5fe74d9d1d84acc56857873c961.json
assets/: comfy_post_prompt.json  comfy_queue_response.json  ruoyi_post_prompt.json
src/: comfy_client.rs  configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: comfy_queue_response.rs  mod.rs  ruoyi_prompt_request.rs  workflow.rs
src/routes/: exist.rs  mod.rs  prompt.rs  queue.rs
tests/: test_health_check.rs
