[package]
name = "zz_rust_web_template"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.213", features = ["derive"] }
config = { version = "0.14.1" }
serde_json = "1.0.132"

[dev-dependencies]
reqwest = "0.12.8"