[package]
name = "zz_rust_web_template"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.213", features = ["derive"] }
config = { version = "0.14.1" }
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.132"
uuid = { version = "1", features = ["v4"]}
chrono = "0.4.38"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "macros",
    "chrono"
]

[dev-dependencies]
wiremock = "0.6.2"